--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,9 @@
   </style>
   <script src="libraries/p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
+  <!-- <script src="bar-chart.js"></script> -->
   <script src="sketch.js"></script>
+
 </head>
 
 <body>
