added basic charts: bar, scatter, line, pie

--- a/project/index.html
+++ b/project/index.html
@@ -15,13 +15,36 @@
   <script src="libraries/p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <!-- <script src="bar-chart.js"></script> -->
-  <script src="sketch.js"></script>
+  <!-- <script src="scatter-plot.js"></script> -->
+  <!-- <script src="line-plot.js"></script> -->
+  <!-- <script src="pie-chart.js"></script> -->
+  <script src="index.js"></script>
 
 </head>
 
 <body>
-  <main>
-  </main>
+   <!-- Tab links -->
+  <div class="tab">
+    <button class="tablinks" onclick="openTab(event, 'bar')">Bar Chart</button>
+    <button class="tablinks" onclick="openTab(event, 'line')">Line Graph</button>
+    <button class="tablinks" onclick="openTab(event, 'scatter')">Scatter Plot</button>
+  </div>
+
+  <!-- Tab content -->
+  <div id="bar" class="tabcontent">
+    <h3>Bar Chart</h3>
+    <!-- <script src="bar-chart.js"></script> -->
+  </div>
+
+  <div id="line" class="tabcontent">
+    <h3>Line Plot</h3>
+    <!-- <script src="line-plot.js"></script>  -->
+  </div>
+
+  <div id="scatter" class="tabcontent">
+    <h3>Scatter Plot</h3>
+    <!-- <script src="scatter-plot.js"></script> -->
+  </div> 
 </body>
 
 </html>
