adding library functions

--- a/project/index.html
+++ b/project/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>p5.js example</title>
+  <!-- <h1>Scatter Plot Dashboard</h1> -->
+  <div style="display: flex; flex-direction: row; background-color: red; justify-content: space-between;"> 
+    <div>
+    <!-- <h3>Shape Of You</h3> -->
+    <!-- <a href="labelled-scatter.js"></a> -->
+  </div>
+    <div>
+      <!-- <h3>Despacito</h3> -->
+      <!-- <a href="labelled-scatter2.js"></a> -->
+    </div>
+  </div>
   <style>
     body {
       padding: 0;
-      margin: 0;
-      background-color: lightgray;
+      margin-left: 50px;
+      /* background-color: lightgray; */
     }
   </style>
   <script src="libraries/p5.js"></script>
@@ -18,33 +28,16 @@
   <!-- <script src="scatter-plot.js"></script> -->
   <!-- <script src="line-plot.js"></script> -->
   <!-- <script src="pie-chart.js"></script> -->
-  <script src="index.js"></script>
-
+  <!-- <script src="force-directed.js"></script> -->
+  <script src="labelled-scatter.js"></script>
+  <!-- <script src="index.js"></script> -->
+  <!-- <script src="donut-chart.js"></script> -->
+  <!-- <script src="LineChart.js"></script> -->
+  <!-- <script src="sketch.js"></script> -->
+  <!-- <script src="quick-sort.js"></script> -->
+  <!-- <script src="bubble-sort.js"></script> -->
 </head>
-
 <body>
-   <!-- Tab links -->
-  <div class="tab">
-    <button class="tablinks" onclick="openTab(event, 'bar')">Bar Chart</button>
-    <button class="tablinks" onclick="openTab(event, 'line')">Line Graph</button>
-    <button class="tablinks" onclick="openTab(event, 'scatter')">Scatter Plot</button>
-  </div>
-
-  <!-- Tab content -->
-  <div id="bar" class="tabcontent">
-    <h3>Bar Chart</h3>
-    <!-- <script src="bar-chart.js"></script> -->
-  </div>
-
-  <div id="line" class="tabcontent">
-    <h3>Line Plot</h3>
-    <!-- <script src="line-plot.js"></script>  -->
-  </div>
-
-  <div id="scatter" class="tabcontent">
-    <h3>Scatter Plot</h3>
-    <!-- <script src="scatter-plot.js"></script> -->
-  </div> 
 </body>
 
 </html>
